<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <artifactId>sqldsl</artifactId>
    <groupId>com.gullerya</groupId>
    <version>1.0-SNAPSHOT</version>

    <name>SQL DSL (Java)</name>
    <description>
        SQL queries builder and executor, implemented in Java. Featured by strongly typed validations, simplicity of use.
    </description>
    <url>https://github.com/gullerya/sql-dsl-java</url>

    <licenses>
        <license>
            <name>The Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>gullery</id>
            <name>Yuri Guller</name>
            <email>gullerya@gmail.com</email>
            <organization>GullerYA</organization>
            <roles>
                <role>Maintainer</role>
            </roles>
        </developer>
    </developers>

    <scm>
        <url>https://github.com/gullerya/sql-dsl-java</url>
    </scm>

    <properties>
        <jpa>2.2</jpa>
        <slf4j>1.7.30</slf4j>

        <!--BUILD-->
        <jdk.version>11</jdk.version>
        <maven-clean-plugin>3.1.0</maven-clean-plugin>
        <maven-resources-plugin>3.2.0</maven-resources-plugin>
        <maven-compiler-plugin>3.8.1</maven-compiler-plugin>
        <maven-jar-plugin>3.2.0</maven-jar-plugin>
        <maven-source-plugin>3.2.0</maven-source-plugin>
        <maven-javadoc-plugin>3.2.0</maven-javadoc-plugin>
        <maven-install-plugin>3.0.0-M1</maven-install-plugin>

        <!--DEPLOY-->
        <nexus-url>https://oss.sonatype.org</nexus-url>
        <maven-gpg-plugin>1.6</maven-gpg-plugin>
        <nexus-staging-maven-plugin.version>1.6.8</nexus-staging-maven-plugin.version>

        <!--QUALITY-->
        <skipTests>true</skipTests>
        <log4j-slf4j-impl>2.14.1</log4j-slf4j-impl>
        <junit>4.13.2</junit>
        <maven-surefire-plugin>3.0.0-M5</maven-surefire-plugin>
        <jacoco-maven-plugin>0.8.6</jacoco-maven-plugin>
        <spotbugs>4.2.2</spotbugs>
        <hikaricp>4.0.3</hikaricp>
		<apache-derby>10.15.2.0</apache-derby>
        <sql-maven-plugin>1.5</sql-maven-plugin>
        <mssql-jdbc>9.2.1.jre11</mssql-jdbc>
        <postgresql>42.2.19</postgresql>
    </properties>

    <dependencies>
        <dependency>
            <artifactId>javax.persistence-api</artifactId>
            <groupId>javax.persistence</groupId>
            <version>${jpa}</version>
        </dependency>
        <dependency>
            <artifactId>slf4j-api</artifactId>
            <groupId>org.slf4j</groupId>
            <version>${slf4j}</version>
        </dependency>

        <!--TESTS-->
        <dependency>
            <artifactId>log4j-slf4j-impl</artifactId>
            <groupId>org.apache.logging.log4j</groupId>
            <version>${log4j-slf4j-impl}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <artifactId>junit</artifactId>
            <groupId>junit</groupId>
            <version>${junit}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <artifactId>HikariCP</artifactId>
            <groupId>com.zaxxer</groupId>
            <version>${hikaricp}</version>
            <scope>test</scope>
        </dependency>
		<dependency>
			<artifactId>derby</artifactId>
			<groupId>org.apache.derby</groupId>
			<version>${apache-derby}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.derby</groupId>
			<artifactId>derbytools</artifactId>
			<version>${apache-derby}</version>
			<scope>test</scope>
		</dependency>
        <dependency>
            <artifactId>mssql-jdbc</artifactId>
            <groupId>com.microsoft.sqlserver</groupId>
            <version>${mssql-jdbc}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <artifactId>postgresql</artifactId>
            <groupId>org.postgresql</groupId>
            <version>${postgresql}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>${nexus-url}/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <url>${nexus-url}/service/local/staging/deploy/maven2</url>
        </repository>
    </distributionManagement>

    <build>
        <pluginManagement>
            <plugins>
                <!--BUILD-->
                <plugin>
                    <artifactId>maven-clean-plugin</artifactId>
                    <groupId>org.apache.maven.plugins</groupId>
                    <version>${maven-clean-plugin}</version>
                </plugin>
                <plugin>
                    <artifactId>maven-resources-plugin</artifactId>
                    <groupId>org.apache.maven.plugins</groupId>
                    <version>${maven-resources-plugin}</version>
                    <configuration>
                        <encoding>UTF-8</encoding>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <groupId>org.apache.maven.plugins</groupId>
                    <version>${maven-compiler-plugin}</version>
                    <configuration>
                        <release>${jdk.version}</release>
                        <encoding>UTF-8</encoding>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-jar-plugin</artifactId>
                    <groupId>org.apache.maven.plugins</groupId>
                    <version>${maven-jar-plugin}</version>
                </plugin>
                <plugin>
                    <artifactId>maven-install-plugin</artifactId>
                    <groupId>org.apache.maven.plugins</groupId>
                    <version>${maven-install-plugin}</version>
                </plugin>

                <!--TESTS-->
                <plugin>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <groupId>org.apache.maven.plugins</groupId>
                    <version>${maven-surefire-plugin}</version>
                    <configuration>
                        <skipTests>${skipTests}</skipTests>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <groupId>org.jacoco</groupId>
                    <version>${jacoco-maven-plugin}</version>
                </plugin>
                <plugin>
                    <artifactId>sql-maven-plugin</artifactId>
                    <groupId>org.codehaus.mojo</groupId>
                    <version>${sql-maven-plugin}</version>
                    <configuration>
                        <driver>${tests.db.driver}</driver>
                        <url>${tests.db.url}</url>
                        <username>${tests.db.username}</username>
                        <password>${tests.db.password}</password>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>spotbugs-maven-plugin</artifactId>
                    <groupId>com.github.spotbugs</groupId>
                    <version>${spotbugs}</version>
                    <configuration>
                        <effort>max</effort>
                        <maxRank>20</maxRank>
                    </configuration>
                    <executions>
                        <execution>
                            <goals>
                                <goal>check</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>

                <!--DEPLOY-->
                <plugin>
                    <artifactId>maven-source-plugin</artifactId>
                    <groupId>org.apache.maven.plugins</groupId>
                    <version>${maven-source-plugin}</version>
                    <configuration>
                        <excludeResources>true</excludeResources>
                    </configuration>
                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <goals>
                                <goal>jar-no-fork</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <groupId>org.apache.maven.plugins</groupId>
                    <version>${maven-javadoc-plugin}</version>
                    <configuration>
                        <encoding>UTF-8</encoding>
                        <excludePackageNames>com.gullerya.typedsql.impl</excludePackageNames>
                    </configuration>
                    <executions>
                        <execution>
                            <id>attach-javadocs</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <artifactId>maven-gpg-plugin</artifactId>
                    <groupId>org.apache.maven.plugins</groupId>
                    <version>${maven-gpg-plugin}</version>
                    <configuration>
                        <keyname>gullerya@gmail.com</keyname>
                    </configuration>
                    <executions>
                        <execution>
                            <id>sign-artifacts</id>
                            <phase>verify</phase>
                            <goals>
                                <goal>sign</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <artifactId>nexus-staging-maven-plugin</artifactId>
                    <groupId>org.sonatype.plugins</groupId>
                    <version>${nexus-staging-maven-plugin}</version>
                    <extensions>true</extensions>
                    <configuration>
                        <serverId>ossrh</serverId>
                        <nexusUrl>${nexus-url}</nexusUrl>
                        <autoReleaseAfterClose>false</autoReleaseAfterClose>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

</project>